[tool.poetry]
name = "spretty"
version = "0.1.0"
description = ""
authors = ["mudox <imudox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spretty = "spretty:main.main"
